samples/_failures_safe/1761458665_cb5a6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50f69d60.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_50f69d60.c:158:13: error: expected expression at end of input
  158 |             if (result < 0 && right >
      |             ^~
./samples/SAFE/__tmp_50f69d60.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50f69d60.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50f69d60.c:158:13: error: expected declaration or statement at end of input
